# wildlife-grad-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  PRODUCT.md  README.md  apply_geographic_update.py  batch_verification_export.py  check_scrape_completion.sh  cleanup_legacy_files.py  dev-scrape.sh  fix_supabase_views.py  fix_supabase_views_corrected.py  migrate_legacy_data.py  package-lock.json  package.json  playwright.config.js  position_review_20250804_103210.xlsx  pyproject.toml  requirements.txt  restore_historical_data.sh  setup-data-exclusion.sh  setup.py  sync-before-dev.sh  test_json_only.html  test_supabase.html  todo.md  update_geographic_view.sql  update_supabase_views.py  wildlife_job_scraper.py  wildlife_positions_full_review.xlsx
config/: update_discipline_view.sql  update_views.sql
dashboard/: MIGRATION.md  README.md  index.html  wildlife_dashboard.html
data/: historical_positions.json  ml_training_data.json
database/: supabase_schema.sql
docs/: CLAUDE.md  DISCIPLINE_REVIEW_LOOP.md  GITHUB_SETUP.md  SUPABASE_SETUP.md  architecture.md
logs/: .b8321921d988b8e78e99f1a466ecd7c5ef153933-audit.json  supabase_health_20251013_125618.json
scripts/: README.md  VERIFICATION_GUIDE.md  analyze_ml_improvements.py  apply_corrections.py  check_dashboard_leakage_titles.py  check_latest_data.py  check_scrape_completion.sh  dev-scrape.sh  export_for_review.py  generate_dashboard_analytics.py  import_discipline_queue_reviews.py  import_review_corrections.py  populate_supabase.py  restore_historical_data.sh  retrain_discipline_model.py  review_discipline_assignments.py  robust_data_pipeline.py  send_discord_weekly_summary.py  sync-before-dev.sh  update_dashboard_local.py  verify_classifications.py
src/: __init__.py
temp/: classification_analysis_results.json  debug_dashboard.html  debug_live_dashboard.html  (+4 more)
(+250 files in other folders)
